--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
-    "redux-persist": "^4.0.1",
+    "redux-persist": "^6.0.0",
     "release-it": "^2.4.3"
   },
   "peerDependencies": {
-    "redux-persist": "^3.4.0 || ^4.0.1"
+    "redux-persist": "^3.4.0 || ^4.0.1 || ^6.0.0"
   },
   "files": [
     "dist",
